FIx navbar gap issue

--- a/navbar.css
+++ b/navbar.css
@@ -24,7 +24,7 @@
     height:56px;
   }
   
-  ul{
+  .navbarLabel{
     list-style-type: none;
     margin:0 0 0 0;
     padding: 0;
@@ -83,10 +83,11 @@
     .navbar{
       padding: 20px 20px;
     }
-    ul{
+
+    .navbarLabel{
       display:none;
-      gap:20px;
     }
+
     li a{
       font-size:16px;
     }
@@ -106,9 +107,9 @@
   
 
     .navbarMenu{
-      display: flex;
-      
+      display: none;
     }
+
     .navbarMenu a{
       width: 100%;
       height: 56px;
